--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     
                     <!-- CAMPO BLOCO -->
                     <div>
-                        <label class="text-xs font-bold text-slate-500 uppercase mb-1 block">ID LOTE</label>
+                        <label class="text-xs font-bold text-slate-500 uppercase mb-1 block">SETOR</label>
                         <select id="talhao" required class="w-full p-2 border border-slate-300 rounded-lg focus:ring-2 focus:ring-emerald-500 outline-none text-sm bg-white">
                             <option value="">Selecione...</option>
                             <option value="1">1</option>
@@ -585,7 +585,7 @@
                         
                         <div class="flex justify-between items-start mb-4 border-b border-slate-100 pb-2">
                             <div class="flex flex-col items-start">
-                                <span class="text-[10px] font-bold text-slate-400 uppercase tracking-widest mb-0.5">ID Lote ${item.talhao} • ${harvestText}</span>
+                                <span class="text-[10px] font-bold text-slate-400 uppercase tracking-widest mb-0.5">Setor ${item.talhao} • ${harvestText}</span>
                                 <span class="text-xl font-black text-slate-800 uppercase tracking-tight leading-none">${item.commercialVariety ? `${item.variety} - ${item.commercialVariety}` : item.variety}</span>
                             </div>
                             ${discardLabel}
