--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 
             // VERIFICAÇÃO SE É DESCARTE PARA O TÍTULO
             const hasDiscard = harvestData.length > 0 && harvestData.some(item => item.isDiscard);
-            const reportType = hasDiscard ? "Descarte" : "Resumo da Colheita";
+            const reportType = hasDiscard ? "Descarte" : "Resumo da Produção";
 
             const titleEl = document.getElementById('reportTitle');
             if (titleEl) titleEl.innerHTML = `${greeting}<br>${reportType} de ${dayOfWeek}`;
@@ -882,6 +882,14 @@
 
                 const filename = `${prefix} - ${weekday} ${dateStr} Semana ${weekNum} - ${partnerName}.png`;
 
+                // --- TEXTO DINÂMICO DE COMPARTILHAMENTO ---
+                const hours = now.getHours();
+                const greeting = hours < 12 ? "Bom dia" : (hours < 18 ? "Boa tarde" : "Boa noite");
+                const shareDate = now.toLocaleDateString('pt-BR');
+                
+                // ADICIONADO: Quebra de linha (\n) após "Pessoal!"
+                const shareText = `${greeting}, Pessoal!\nResumo da Produção - ${shareDate} - Semana ${weekNum}`;
+
                 // Tenta compartilhar nativamente (Mobile)
                 canvas.toBlob(async (blob) => {
                     const file = new File([blob], filename, { type: 'image/png' });
@@ -891,7 +899,7 @@
                             await navigator.share({
                                 files: [file],
                                 title: filename,
-                                text: 'Segue o resumo da colheita.'
+                                text: shareText // Texto atualizado com Semana
                             });
                         } catch (err) {
                             if (err.name !== 'AbortError') {
@@ -907,7 +915,9 @@
                         // Abre WhatsApp Web como fallback visual
                         showMessageModal('Imagem Salva', 'A imagem foi baixada. Abrindo WhatsApp...', 'success');
                         setTimeout(() => {
-                             window.open('https://web.whatsapp.com/', '_blank');
+                             // Tenta abrir com o texto pré-definido também na URL
+                             const encodedText = encodeURIComponent(shareText);
+                             window.open(`https://web.whatsapp.com/send?text=${encodedText}`, '_blank');
                         }, 2000);
                     }
                 }, 'image/png');
